nome dos pacotes mudados para wendel-ignite-ui

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -27,10 +27,10 @@
     "vite": "^3.2.3"
   },
   "dependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/react": "*",
-    "@ignite-ui/tokens": "*",
-    "@ignite-ui/ts-config": "*",
+    "@wendel-ignite-ui/eslint-config": "*",
+    "@wendel-ignite-ui/react": "*",
+    "@wendel-ignite-ui/tokens": "*",
+    "@wendel-ignite-ui/ts-config": "*",
     "@storybook/addon-a11y": "^6.5.13",
     "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
