--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,9 +14,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/tokens": "*",
-    "@ignite-ui/ts-config": "*",
+    "@wendel-ignite-ui/eslint-config": "*",
+    "@wendel-ignite-ui/tokens": "*",
+    "@wendel-ignite-ui/ts-config": "*",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "react": "^18.2.0",
