--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,11 +14,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "@wendel-ignite-ui/eslint-config": "*",
     "@wendel-ignite-ui/tokens": "*",
     "@wendel-ignite-ui/ts-config": "*",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
     "react": "^18.2.0",
     "tsup": "^6.4.0",
     "typescript": "^4.8.4"
@@ -26,6 +26,8 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-toast": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.0.2",
     "@stitches/react": "^1.2.8",
     "phosphor-react": "^1.4.1"
   }
